--- a/apps/dashboard/src/styles.scss
+++ b/apps/dashboard/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
 
@@ -14,12 +14,23 @@ body {
   font-family: 'Fira Sans', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6,label,span {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label,
+span {
   font-weight: 500;
   font-family: 'Fira Sans', sans-serif;
 }
 
-body, html, .App, #root, .auth-wrapper {
+body,
+html,
+.App,
+#root,
+.auth-wrapper {
   width: 100%;
   height: 100%;
 }
@@ -42,7 +53,7 @@ body, html, .App, #root, .auth-wrapper {
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 40px 55px 45px 55px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .auth-wrapper .form-control:focus {
@@ -61,15 +72,22 @@ body, html, .App, #root, .auth-wrapper {
   font-weight: 400;
 }
 
-.forgot-password,
-.forgot-password a {
-  text-align: right;
-  font-size: 13px;
-  padding-top: 10px;
-  color: #7f7d7d;
-  margin: 0;
+.wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding-top: 56px;
+  overflow: hidden;
 }
 
-.forgot-password a {
-  color: #167bff;
+.device_info {
+  float: left;
+  width: 400px;
+  height: 100vh;
+}
+
+.map_canvas {
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
