--- a/apps/dashboard/src/styles.scss
+++ b/apps/dashboard/src/styles.scss
@@ -33,6 +33,8 @@ html,
 .auth-wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar-light {
@@ -76,7 +78,6 @@ html,
   position: relative;
   width: 100%;
   height: 100vh;
-  padding-top: 56px;
   overflow: hidden;
 }
 
@@ -90,4 +91,93 @@ html,
   height: 100vh;
   position: relative;
   overflow: hidden;
+}
+
+.device_info {
+  background: aliceblue !important;
+}
+
+// https://codepen.io/nymnorega/pen/gaxVXw
+header {
+  position: relative;
+}
+
+.hide {
+  display: none;
+}
+
+#material-tabs {
+  position: relative;
+  display: block;
+  padding: 0;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+#material-tabs > a {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  padding: 22px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  color: #424f5a;
+  text-align: center;
+}
+
+#material-tabs > a.active {
+  font-weight: 700;
+  outline: none;
+  border-bottom: solid #458cff;
+  border-bottom-width: 4px;
+  opacity: 1;
+}
+
+#material-tabs > a:not(.active):hover {
+  background-color: inherit;
+  color: #7c848a;
+}
+
+@media only screen and (max-width: 520px) {
+  .nav-tabs#material-tabs > li > a {
+    font-size: 11px;
+  }
+}
+.tab-content {
+  position: relative;
+  min-height: 150px;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 8px;
+}
+
+.last-div {
+  box-shadow: 0px 5px 10px -2px #aaa;
+}
+
+.device-icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 32px;
+}
+
+.device-icon-large {
+  display: table-cell;
+  float: left;
+  margin: 24px;
+  vertical-align: middle;
+  width: 100px;
+}
+
+.device-details {
+  display: table-cell;
+  float: left;
+  margin-bottom: 24px;
+  // margin-top: 24px;
+  width: 180px;
+}
+
+.navbar-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
